
Version (SVN)
-------------

XML:   Resolved issue CASTOR-690 using contribution from Doug Berkland [berkland@spamcop.net]
       Fixed problem with location attribute in the context of extend hierarchies.
       Details: http://jira.codehaus.org/browse/CASTOR-690
       (Werner - 200605024)

XML:   Resolved issue CASTOR-1415 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Upgraded Jakarta commons logging to 1.1.
       Details: http://jira.codehaus.org/browse/CASTOR-1415
       (Werner - 20060523)

XML:   Resolved issue CASTOR-1420 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed a problem with the application of naming conventions in introspection mode.
       Details: http://jira.codehaus.org/browse/CASTOR-1420
       (Werner - 20060523)

JDO:   Resolved issue CASTOR-1424 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Renamed tables of CTF tests in ctf.jdo.tc7x package.
       Details: http://jira.codehaus.org/browse/CASTOR-1424
       (Werner - 20060523)
       
JDO:   Resolved issue CASTOR-1423 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved the remaining 10 CTF tests (JDO) to new ctf.jdo.tc7x package.
       Details: http://jira.codehaus.org/browse/CASTOR-1423
       (Werner - 200605008)

JDO:   Resolved issue CASTOR-1408 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added improved tests for self-referantial relations.
       Details: http://jira.codehaus.org/browse/CASTOR-1413
       (Werner - 200605007)

JDO:   Resolved issue CASTOR-1413 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for ehcache as Castor (performance) cache
       Details: http://jira.codehaus.org/browse/CASTOR-1413
       (Werner - 20060505)

XML:   Fixed bug CASTOR-1406 using contribution from David Green [david.green@maketechnologies.com]
       Fixed EmptyStackException at SAX2ANY.