@@ -1,11 +1,11 @@
 <?xml version='1.0'?>
 <TestDescriptor>
 
-   <Name>Mapping-ByteArrays</Name>
-   <Author>Keith Visco</Author>
+   <Name>Mapping-ByteArrayAttributes</Name>
+   <Author>Werner Guttmann</Author>
 
 	<Comment>
-      Tests the special handling of byte[] in the mapping file.
+      Tests the special handling of byte[] in the mapping file for attributes.
    </Comment>
 
 	<Category>basic capability</Category>
@@ -17,8 +17,6 @@
          <Name>Test01</Name>
          <Mapping_File>mapping.xml</Mapping_File>
          <Input>input.xml</Input>
-         <Output>output.xml</Output>
-         <GoldFile>input.xml</GoldFile>
       </UnitTestCase>
 
 	</MarshallingTest>
